<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.seismiq.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.seismiq.app.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.seismiq.app.ui.report.ReportFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_report" />
        
    <fragment
        android:id="@+id/navigation_landmark"
        android:name="com.seismiq.app.ui.landmark.LandmarkPostFragment"
        android:label="@string/title_landmark"
        tools:layout="@layout/fragment_landmark_post" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.seismiq.app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        
        <action
            android:id="@+id/action_settings_to_edit_profile"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.seismiq.app.ui.settings.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>
